<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Thông tin cơ bản -->
    <groupId>com.todaii.english</groupId>
    <artifactId>todaii-english</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging> <!-- Root chỉ gom module, không build jar -->

    <!-- Gom các module con -->
    <modules>
        <module>apps</module>
        <module>core</module>
        <module>infra</module>
        <module>shared</module>
    </modules>

    <!-- Đặt biến dùng chung -->
    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.3.4</spring-boot.version>
        <spring-ai.version>1.1.6</spring-ai.version>
    </properties>

    <!-- Mặc đinh Maven chỉ tìm trong MVNRepository, repositories dưới cho phép
    tìm trong cả github... -->
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <!-- Quản lý version tập trung -->
    <dependencyManagement>
        <dependencies>
            <!-- BOM Spring Boot: giúp không cần khai báo version cho starter -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Lib ngoài BOM thì phải khai version -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>9.4.0</version>
            </dependency>

            <!-- Lombok: chỉ cần khi compile -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.34</version>
                <scope>provided</scope>
            </dependency>

            <!-- JWT (jjwt) 0.12.x -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>0.12.6</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>0.12.6</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>0.12.6</version>
                <scope>runtime</scope>
            </dependency>

            <!-- Model mapper -->
            <dependency>
                <groupId>org.modelmapper</groupId>
                <artifactId>modelmapper</artifactId>
                <version>3.2.0</version>
            </dependency>

            <!-- Submerge -->
            <dependency>
                <groupId>com.github.dnbn.submerge</groupId>
                <artifactId>submerge-api</artifactId>
                <version>1.9.2</version>
            </dependency>

            <!-- News API -->
            <dependency>
                <groupId>com.github.KwabenBerko</groupId>
                <artifactId>News-API-Java</artifactId>
                <version>1.0.2</version>
            </dependency>

            <!-- Jpa modelgen -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>6.1.7.Final</version>
            </dependency>

            <!-- Cloudinary -->
            <dependency>
                <groupId>com.cloudinary</groupId>
                <artifactId>cloudinary-http5</artifactId>
                <version>2.0.0</version>
            </dependency>

            <!-- JAXB API -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.0</version>
            </dependency>

            <!-- JAXB Runtime (EclipseLink MOXy) -->
            <dependency>
                <groupId>org.eclipse.persistence</groupId>
                <artifactId>org.eclipse.persistence.moxy</artifactId>
                <version>4.0.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.google.cloud.sql/mysql-socket-factory-connector-j-8 -->
            <dependency>
                <groupId>com.google.cloud.sql</groupId>
                <artifactId>mysql-socket-factory-connector-j-8</artifactId>
                <version>1.27.0</version>
            </dependency>

            <!-- quản lý version cho toàn bộ thư viện Google Cloud -->
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>26.80.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Quản lý plugin tập trung -->
    <build>
        <pluginManagement>
            <plugins>
                <!-- Biên dịch Java -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>

                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.34</version>
                            </path>

                            <path>
                                <groupId>org.hibernate</groupId>
                                <artifactId>hibernate-jpamodelgen</artifactId>
                                <version>6.1.7.Final</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- Spring Boot plugin để build fat-jar -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>

                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.43.0</version>

                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>1.17.0</version>
                                <style>GOOGLE</style>
                                <reflowLongStrings>true</reflowLongStrings>
                            </googleJavaFormat>

                            <removeUnusedImports/>

                            <importOrder>
                                <order>java,javax,jakarta,org,com</order>
                            </importOrder>

                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </java>
                    </configuration>

                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
